k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rentme
  labels:
    app.kubernetes.io/name: rentme
    app.kubernetes.io/part-of: rentme
